@@ -87,6 +87,11 @@ unity (6.4.0-0ubuntu1) UNRELEASED; urgency=low
       ‘TextureCoord0Location’ may be used uninitialised in this function 
       [-Werror=uninitialized] (LP: #1036514)
 
+  [ Timo Jyrinki ]
+  * Cherry-pick fixes from upstream:
+    - Launcher: make always possible to drag an icon to the bottom or top 
+      of its sublist (LP: #1043968)
+
  -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Thu, 30 Aug 2012 15:07:23 +0200
 
 unity (6.2.0-0ubuntu4) quantal; urgency=low
